--- a/apps/main/templates/base.html
+++ b/apps/main/templates/base.html
@@ -34,9 +34,9 @@
             
             <div class="d-flex" id='NavItem'>
               <div style="margin-left: 12px" >
-                <a href="#" style="height: 40px;text-align:center;color:white;text-decoration: none;">
+                <a href="{% url 'account_login' %}" style="height: 40px;text-align:center;color:white;text-decoration: none;">
                 Log in</a>
-                <a href="#" class="btn " style="height: 40px;margin-left: 12px;margin-right: 20px;text-align:center;width:150px;background-color:blue;color:white;" >Sign up</a>
+                <a href="{% url 'account_signup' %}" class="btn " style="height: 40px;margin-left: 12px;margin-right: 20px;text-align:center;width:150px;background-color:blue;color:white;" >Sign up</a>
               </div>
               
           </div>
