--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -7,18 +7,29 @@
 
 {% block content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+<div class='bold-line'></div>
+<div class='container'>
+  <div class='window'>
+    <div class='overlay'></div>
+    <div class='content'>
+      <div class='welcome'>{% trans "Password Reset" %}</div>
+      <div >
+            {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+            {% endif %}
+            {% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}                    
+      </div>
+      <div class='input-fields'>
+        <form method="POST" style="margin-top: 80px;" action="{% url 'account_reset_password' %}" class="password_reset">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="submit-btn full-width" style="display: block;" 
+            value="{% trans 'Reset' %}" />
+        </form>
+      </div>
+      <div class='spacing'>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</div>
+    </div>
+  </div>
+</div>
+    
 {% endblock %}
