--- a/templates/socialaccount/snippets/provider_list.html
+++ b/templates/socialaccount/snippets/provider_list.html
@@ -13,8 +13,10 @@
 </li>
 {% endfor %}
 {% endif %}
-<li>
-  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
-</li>
+
+  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}} google btn" 
+     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+      Login with {{provider.name}}
+  </a>
+
 {% endfor %}
