--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,43 +6,51 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-<div class="container ">
-          <h1>{% trans "Sign In" %}</h1>
+<div class='bold-line'></div>
+<div class='container'>
+  <div class='window'>  
+    <div class='overlay'></div>
+    <div class='content'>
+      
+        <div class="welcome">{% trans "Log In" %}</div>
 
-          {% get_providers as socialaccount_providers %}
-
-          {% if socialaccount_providers %}
-          <!--
-            <p>{% blocktrans with site.name as site_name %}Please sign in with one
-          of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-          for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-          -->
-
-          <div class="socialaccount_ballot">
-
-            <ul class="socialaccount_providers">
-              {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-            </ul>
-
-            <div class="login-or">{% trans 'or' %}</div>
-
-          </div>
-
-          {% include "socialaccount/snippets/login_extra.html" %}
-
-          {% else %}
-          <p>{% blocktrans %}If you have not created an account yet, then please
-          <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+    
+        {% get_providers as socialaccount_providers %}
+    
+        {% if socialaccount_providers %}
+        <!--
+          <p>{% blocktrans with site.name as site_name %}Please sign in with one
+        of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+        for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+        -->
+        <div class='spacing socialaccount_ballot'><span class='highlight'></span>    
+          <li class="socialaccount_providers" style="list-style: none; text-decoration: none; margin-right: 10px;">
+            {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+          </li>           
+        </div>
+    
+        {% include "socialaccount/snippets/login_extra.html" %}
+    
+        {% else %}
+        <p>{% blocktrans %}If you have not created an account yet, then please
+        <a href="{{ signup_url }}">Log In</a> first.{% endblocktrans %}</p>
+        {% endif %}
+    
+        <form class="login input-fields" method="POST" action="{% url 'account_login' %}">
+          {% csrf_token %}
+          {{ form.as_p }}
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
 
-          <form class="login" method="POST" action="{% url 'account_login' %}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
-            <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-            <button class="btn btn-danger primaryAction" type="submit">{% trans "Sign In" %}</button>
-          </form>
+          <a class="button secondaryAction" href="{% url 'account_reset_password' %}"
+          style="text-decoration: none; color: cyan;">
+            {% trans "Forgot Password?" %}</a>
+
+          <button class="primaryAction submit-btn full-width" style="display: block;" type="submit">{% trans "Log In" %}</button>  
+        </form>
+        
+    </div>
+  </div>
 </div>
 {% endblock %}
