Social authentication added

--- a/apps/main/templates/base.html
+++ b/apps/main/templates/base.html
@@ -36,6 +36,8 @@
               <div style="margin-left: 12px" >
                 <a href="{% url 'account_login' %}" style="height: 40px;text-align:center;color:white;text-decoration: none;">
                 Log in</a>
+                <a href="{% url 'account_logout' %}" style="margin-left: 5px; height: 40px;text-align:center;color:white;text-decoration: none;">
+                  Log out</a>
                 <a href="{% url 'account_signup' %}" class="btn " style="height: 40px;margin-left: 12px;margin-right: 20px;text-align:center;width:150px;background-color:blue;color:white;" >Sign up</a>
               </div>
               
