--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -12,7 +12,7 @@
     {% block extra_head %}
     {% endblock %}
   </head>
-  <body>
+  <body style="overflow-y: hidden;"> 
     {% block body %}
 
     {% if messages %}
