--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -5,12 +5,28 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+<div class='bold-line'></div>
+<div class='container'>
+  <div class='window'>
+    <div class='overlay'></div>
+    <div class='content'>
+      <div class='welcome'>{% trans "Change Password" %}</div>
+      <div class='input-fields'>
+        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <a href="{% url 'account_reset_password' %}" style="text-decoration: none; color: cyan;">
+                {% trans "Forgot Password?" %}</a>
+            <button type="submit" class="submit-btn full-width" name="action">{% trans "Change Password" %}</button>
+        </form>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+    
 {% endblock %}
