--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -5,11 +5,25 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+<div class='bold-line'></div>
+<div class='container'>
+  <div class='window'>
+    <div class='overlay'></div>
+    <div class='content'>
+      <div class='welcome'>{% trans "Set Password" %}</div>
+      
+      <div class='input-fields'>
+        <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="submit-btn full-width" name="action" value="{% trans 'Set Password' %}"/>
+        </form>
+
+      </div>
+      
+    </div>
+  </div>
+</div>
+
 {% endblock %}
