--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -6,11 +6,13 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
+    <h1 class="welcome">{% trans "Password Reset" %}</h1>
     
+   <div class="subtitle">
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
+   </div>
     
-    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <p class="subtitle">{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 {% endblock %}
