--- a/apps/main/templates/frontpage.html
+++ b/apps/main/templates/frontpage.html
@@ -2,5 +2,16 @@
 {% load static %}
 
 {% block content %}
-
+<div class="container" id="box" style="margin-top: 30px;">
+{% for post in posts %}
+<a href="{% url 'account_login' %}" style="text-decoration: none;">
+<div class="bg-light shadow text-wrap p-3" id="Post_box">
+    <p style="font-weight: 500;margin-bottom: 1px;">
+    By <span style="color:dimgray;" id="user">{{post.user}}</span></p>
+    <p style="margin-top: 0px;color: dimgrey;">{{post.created_at}}</p>
+    <h2 id="post_title">{{post.title}}</h2>
+</div> 
+</a>
+{% endfor %}      
+</div>
 {% endblock %}
