--- a/apps/main/templates/write_post.html
+++ b/apps/main/templates/write_post.html
@@ -43,8 +43,9 @@
                     <input type="text" name="title" class="form-control shadow-sm" v-model='title'>
                 </div>
                 <div style="margin-top: 20px;">
-                     <label>Tags:</label>
+                    <label>Tags:</label>
                     <input type="text" data-role="tagsinput" class="tags" name="tags" placeholder="Add 'comma' to add tags">
+                    
                 </div>
                 <div id="app" class="shadow" style="margin-top: 20px;">
                     Content:
@@ -61,6 +62,7 @@
                 </div>
                 <button @click='publish()' class="btn btn-danger " style="margin-top: 20px;">Publish</button>
             </div>
+
             <div v-else class="container">
                 You haven't added any posts,yet.
             </div>
@@ -102,10 +104,12 @@
                 }
             },
 
-           methods:{
+            methods:{
 
             publish() {
-				var data = {'title':this.title,'content':this.content}
+                var tags = $("input").tagsinput('items')[3]
+                console.log(tags)
+				var data = {'title':this.title,'content':this.content,'tags':tags}
 				const url = '/api/post/'
 
 				fetch(url,{
@@ -125,9 +129,10 @@
 					console.log(error)
 				})				
 
-			},
+			}, 
 
            }
+
 
         }).use(CKEditor)
         const createApp = write_post.mount('#write_post')
