profile settings page added

--- a/apps/main/templates/reading_list.html
+++ b/apps/main/templates/reading_list.html
@@ -4,7 +4,9 @@
 {% block content %}
 
 <div class="container" id="box" style="margin-top: 30px;margin-bottom: 30px;">
+    
     <article class="bg-light shadow text-wrap p-5" id="reading_list">
+        <h4 class="mb-4">Your reading lists</h4>
     {% for reading_list in reading_lists %}
         <div style="margin-left: 30px;">
             <div>
