--- a/apps/main/templates/frontpage.html
+++ b/apps/main/templates/frontpage.html
@@ -3,7 +3,28 @@
 {% load static %}
 
 {% block content %}
-    {% include 'post_box/post_box.html' %}
+<div class="container-fluid">
+<div class="row">
+	<div class="col-2 bg-light shadow text-wrap p-3 " id='col-1-box'>
+		<p style="font-weight: bold;">
+			<span style="color: orange;font-weight: bolder;">Articular</span>
+		is a platform to share or improve a powerful weapon called <span style="color: royalblue;">knowledge</span>.</p>
+		<div class="links">
+			<a href="{% url 'frontpage' %}">Home</a>
+			<a href="{% url 'account_signup' %}">Sign In/up</a>
+		{% if request.user.is_authenticated %}
+			<a href="{% url 'reading_list' %}">Listings</a>
+			<a href="{% url 'profile_settings' %}">Profile</a>
+		{% endif %}
+			<a href="#">Contact</a>
+		</div>
+	</div>
+	<div class="col-9">
+		{% include 'post_box/post_box.html' %}
+	</div>
+</div>
+</div>    
+
 {% endblock %}
 
 {% block scripts %}
@@ -28,7 +49,7 @@
 					body:JSON.stringify(data)
 				})
 				.then((response)=>{
-					console.log(response)
+					console.table(response)
 					console.log(data)
 				})
 				.catch(function(error){
