--- a/apps/main/templates/post_box/post_box.html
+++ b/apps/main/templates/post_box/post_box.html
@@ -1,29 +1,34 @@
 <div class="container" id="box" style="margin-top: 30px;margin-bottom: 30px;">
+    <div style="font-weight: bolder;">Posts</div>
     {% for post in posts %}
-    <a href="{% url 'blog_detail' pk=post.id %}" style="text-decoration: none;"></a>
-    <article class="bg-light shadow text-wrap p-3" id="Post_box">
+    <a href="{% url 'blog_detail' pk=post.id %}" style="text-decoration: none;">
+    <article class="bg-light shadow text-wrap p-3 h-auto" id="Post_box">
+    <div class="m-3">
         <p style="font-weight: 500;margin-bottom: 1px;">
         By <span style="color:dimgray;" id="user">{{post.user}}</span></p>
         <p style="margin-top: 0px;color: dimgrey;">{{post.created_at}}</p>
         <div style="margin-left: 30px;">
              <h2 style="color: black;font-size: 1.5em;">{{post.title}}</h2>
 
-            <div style="margin-bottom: 10px;">
+            <div>
             {% for tag in post.tags.all %}
                 <a href="{% url 'tag_post_list' tag.slug %}" id="tag_name" class="link-light text-decoration-none badge ">
                     #{{tag.name}}
                 </a>
             {% endfor %}
             </div>
-            
+            <p hidden> .</p>
             <div class="icon_div">
                 <i class="far fa-heart like"></i>
                 <i class="far fa-comment-dots comment" style="margin-left: 50px;"></i>
             </div>
+            {% if request.user.is_authenticated %}
             <div style="float: right;">
                 <button @click='addToReadinglist({{post.id}})' class="btn btn-danger">Save</button>
             </div>
+            {% endif %}
         </div>
+    </div>
     </article> 
     </a>
     {% endfor %}      
