--- a/apps/userProfile/templates/profile_settings.html
+++ b/apps/userProfile/templates/profile_settings.html
@@ -12,7 +12,6 @@
 </head>
 <body>
   <div class="main-content" id="profile">
-   
     <!-- Header -->
     <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px ;background-size: cover; background-position: center top;">
       <!-- Mask -->
@@ -177,7 +176,7 @@
                   </div>
                   <div class="col-lg-4">
                     <div class="form-group focused">
-                      <label class="form-control-label" for="input-studies">Studies</label>
+                      <label class="form-control-label" for="input-studies">Experties</label>
                       <input type="text" id="input-studies" class="form-control form-control-alternative"
                        placeholder="eg:Django,Vue"  name='education' value="{{ request.user.user_profile.education }}">
                     </div>
