--- a/apps/main/templates/base.html
+++ b/apps/main/templates/base.html
@@ -38,8 +38,7 @@
               <div style="margin-left: 12px" >
                 <a href="{% url 'account_login' %}" style="height: 40px;text-align:center;color:white;text-decoration: none;">
                 Log in</a>
-                <a href="{% url 'account_logout' %}" style="margin-left: 5px; height: 40px;text-align:center;color:white;text-decoration: none;">
-                  Log out</a>
+                
                 <a href="{% url 'account_signup' %}" class="btn" style="height: 40px;margin-left: 12px;margin-right: 20px;text-align:center;width:150px;background-color:blue;color:white;" >Sign up</a>
                 
               </div>
@@ -50,7 +49,7 @@
               <div style="margin-left: 12px" >
                 <a href="{% url 'write_post' %}" class="btn btn-danger" style="height: 40px;text-align:center;color:white;text-decoration: none;margin-right: 20px;">
                 Write Post</a>
-                <a href="{% url 'profile_settings' %}" class="btn" style="height: 40px;margin-left: 12px;margin-right: 20px;text-align:center;width:150px;background-color:blue;color:white;" >Profile{{request.user.username}}</a>
+                <a href="{% url 'profile_settings' %}" class="btn" style="height: 40px;margin-left: 12px;margin-right: 20px;text-align:center;width:150px;background-color:blue;color:white;" >{{request.user.username}}</a>
               </div>
               
             {% endif %}
