--- a/apps/main/templates/frontpage.html
+++ b/apps/main/templates/frontpage.html
@@ -10,13 +10,16 @@
 			<span style="color: orange;font-weight: bolder;">Articular</span>
 		is a platform to share or improve a powerful weapon called <span style="color: royalblue;">knowledge</span>.</p>
 		<div class="links">
-			<a href="{% url 'frontpage' %}">Home</a>
-			<a href="{% url 'account_signup' %}">Sign In/up</a>
+			<a href="{% url 'frontpage' %}">Home</a>	
 		{% if request.user.is_authenticated %}
-			<a href="{% url 'reading_list' %}">Listings</a>
+			<a href="{% url 'reading_list' %}">Reading Lists</a>
 			<a href="{% url 'profile_settings' %}">Profile</a>
+			<a href="{% url 'myposts' %}">My Posts</a>
+			<a href="{% url 'account_logout' %}">Log out</a>
+		{% else %}
+			<a href="{% url 'account_signup' %}">Sign In/up</a>
 		{% endif %}
-			<a href="#">Contact</a>
+			
 		</div>
 	</div>
 	<div class="col-9">
