--- a/apps/main/templates/post_box/post_box.html
+++ b/apps/main/templates/post_box/post_box.html
@@ -1,14 +1,15 @@
 <div class="container" id="box" style="margin-top: 30px;margin-bottom: 30px;">
     <div style="font-weight: bolder;">Posts</div>
     {% for post in posts %}
-    <a href="{% url 'blog_detail' pk=post.id %}" style="text-decoration: none;">
+    
     <article class="bg-light shadow text-wrap p-3 h-auto" id="Post_box">
     <div class="m-3">
         <p style="font-weight: 500;margin-bottom: 1px;">
-        By <span style="color:dimgray;" id="user">{{post.user}}</span></p>
+        By <a style="color:dimgray;text-decoration: none;" href="{% url 'profile_page' pk=post.id user=post.user.id %}" id="user">{{post.user}}</a></p>
         <p style="margin-top: 0px;color: dimgrey;">{{post.created_at}}</p>
         <div style="margin-left: 30px;">
-             <h2 style="color: black;font-size: 1.5em;">{{post.title}}</h2>
+
+            <a href="{% url 'blog_detail' pk=post.id %}" id="post_title" >{{post.title}}</a>
 
             <div>
             {% for tag in post.tags.all %}
@@ -18,10 +19,7 @@
             {% endfor %}
             </div>
             <p hidden> .</p>
-            <div class="icon_div">
-                <i class="far fa-heart like"></i>
-                <i class="far fa-comment-dots comment" style="margin-left: 50px;"></i>
-            </div>
+            
             {% if request.user.is_authenticated %}
             <div style="float: right;">
                 <button @click='addToReadinglist({{post.id}})' class="btn btn-danger">Save</button>
@@ -29,7 +27,7 @@
             {% endif %}
         </div>
     </div>
-    </article> 
-    </a>
+     </article> 
+    
     {% endfor %}      
 </div>
