make responsive side box

--- a/apps/main/templates/frontpage.html
+++ b/apps/main/templates/frontpage.html
@@ -3,9 +3,9 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container">
 <div class="row">
-	<div class="col-2 bg-light shadow text-wrap p-3 " id='col-1-box'>
+	<div class="col-md-2 bg-light shadow text-wrap p-3 " id='col-1-box'>
 		<p style="font-weight: bold;">
 			<span style="color: orange;font-weight: bolder;">Articular</span>
 		is a platform to share or improve a powerful weapon called <span style="color: royalblue;">knowledge</span>.</p>
@@ -22,7 +22,7 @@
 			
 		</div>
 	</div>
-	<div class="col-9">
+	<div class="col-md-9">
 		{% include 'post_box/post_box.html' %}
 	</div>
 </div>
